--- a/src/template/components/NavBar_HorizonLinks/style.scss
+++ b/src/template/components/NavBar_HorizonLinks/style.scss
@@ -85,8 +85,42 @@
 
 
 #app {
-  --nav-bar-horizon-links-bg-color: var(--Surface);
+  --nav-bar-bg-color: var(--Surface);
+  --nav-bar-stroke-color: var(--OnSurface);
+  --nav-bar-accent-color: var(--Primary);
+  --nav-bar-on-accent-color: var(--OnPrimary);
 }
+#app .nav-bar-horizon-links {
+  @include PlateBackgroundColor(var(--nav-bar-bg-color));
+  color: var(--nav-bar-stroke-color);
+  border-bottom-color: var(--nav-bar-stroke-color);
+  @include PlateBackgroundOpacity(0);
+  @include PlateBorderBottom(2rem solid var(--nav-bar-stroke-color));
+  @include PlateBorderOpacity(0.08);
+  @include PlateTransition(120ms);
+  .nav-logo svg {
+    path { fill: var(--nav-bar-stroke-color); }
+  }
+  .searchbox-mini {
+    .icon {
+      color: var(--nav-bar-accent-color);
+    }
+    input {
+      border-color: var(--nav-bar-accent-color);
+    }
+    input:focus-visible {
+      background-color: var(--nav-bar-on-accent-color);
+      outline: 2px solid var(--nav-bar-accent-color);
+    }
+  }
+}
+#app .nav-bar-horizon-links.--scrolled {
+  @include PlateBorderBottom(1rem solid var(--nav-bar-stroke-color));
+  @include PlateBorderOpacity(0.16);
+  @include PlateBackgroundOpacity(1);
+  @include Shadow-3(20rem);
+}
+
 
 #app .nav-bar-horizon-links {
   width: 100%;
@@ -103,23 +137,11 @@
     display: flex;
     flex-direction: row;
     gap: var(--nav-bar-header-gap);
-    // height: 100%
     width: var(--contents-container-width); 
     height: var(--nav-bar-height);
   }
+}
 
-  @include PlateBackgroundColor(var(--nav-bar-horizon-links-bg-color));
-  @include PlateBackgroundOpacity(0);
-  @include PlateBorderBottom(2rem solid var(--OnSurface));
-  @include PlateBorderOpacity(0.08);
-  @include PlateTransition(120ms);
-}
-#app .nav-bar-horizon-links.--scrolled {
-  @include PlateBorderBottom(1rem solid var(--OnSurface));
-  @include PlateBorderOpacity(0.16);
-  @include PlateBackgroundOpacity(1);
-  @include Shadow-3(20rem);
-}
 
 #app .nav-bar-horizon-links header {
   font-size: 0;
@@ -127,7 +149,6 @@
   .nav-logo svg {
     width: var(--nav-bar-logo-width);
     height: 100%;
-    path { fill: var(--OnBackground); }
   }
 
   nav {
@@ -155,6 +176,3 @@
   }
 }
 
-
-/* SIZES */
-/* ----------------------------------------------- */
