--- a/src/configs/styles/override/AdTower.scss
+++ b/src/configs/styles/override/AdTower.scss
@@ -1,30 +1,33 @@
+/** OVERRIDE - AdTower */
 
-:is(.scale--XXL, .scale--XL, .scale--L) #app 
+html :is(.scale--XXL, .scale--XL, .scale--L) #app 
 .ad-tower {
   // --wrapper-gap: 36rem;
-  
+  --roundness: 0;
 }
-:is(.scale--M) #app 
+html :is(.scale--M) #app 
 .ad-tower {
   // --wrapper-gap: 32rem;
-  
+  --roundness: 0;
 }
-:is(.scale--S) #app 
+html :is(.scale--S) #app 
 .ad-tower {
   // --wrapper-gap: 30rem;
-  
+  --roundness: 0;
 }
-:is(.scale--XS, .scale--XXS) #app 
+html :is(.scale--XS, .scale--XXS) #app 
 .ad-tower {
   // --wrapper-gap: 24rem;
+  --roundness: 0;
 }
-
 
 html #app .ad-tower {
   ul.wrapper {
     li > * {
       // position: sticky;
       // top: calc(var(--nav-bar-height) + var(--wrapper-gap));
+      border-radius: var(--roundness);
+      overflow: hidden;
     }
   }
 }
