--- a/src/template/components/RouterLink_VstackNest/underlined.scss
+++ b/src/template/components/RouterLink_VstackNest/underlined.scss
@@ -1,10 +1,7 @@
 #app .router-link-vstack-nest.--underlined {
   @include PlateTransition(120ms);
-
   @include PlateBackgroundOpacity(0);
-
-  @include PlateBorderBottom(3rem solid var(--OnSurface));
-  @include PlateBorderColor(var(--OnSurface));
+  @include PlateBorderBottom(3rem solid var(--nav-bar-stroke-color));
   @include PlateBorderOpacity(0);
 }
 #app .router-link-vstack-nest.--underlined:hover {
@@ -14,7 +11,7 @@
 
 #app .router-link-vstack-nest.--underlined .contents {
   margin: 0 3rem;
-  color: var(--OnSurface);
+  color: inherit;
   opacity: 0.74;
 }
 #app .router-link-vstack-nest.--underlined:hover .contents {
@@ -23,10 +20,10 @@
 
 #app .router-link-vstack-nest.--underlined.router-link-active 
 {
-  @include PlateBorderColor(var(--Primary));
+  @include PlateBorderColor(var(--nav-bar-accent-color));
   @include PlateBorderOpacity(1);
   .contents {
-    color: var(--Primary);
+    color: var(--nav-bar-accent-color);
     opacity: 1;
   }
 }
