--- a/src/template/components/Searchbox_Mini/style.scss
+++ b/src/template/components/Searchbox_Mini/style.scss
@@ -14,10 +14,13 @@
     height: 100%;
     padding-left: 36rem;
 
+    transition: 140ms;
+
     color: var(--OnSurface);
     @extend .typo-body-14;
 
     background-color: #ffffff00;
+    outline: 2px solid rgba(255, 255, 255, 0);
     border: 2rem solid var(--Primary);
     border-radius: 0;
   }
