--- a/src/template/styles/typography/_basics.scss
+++ b/src/template/styles/typography/_basics.scss
@@ -31,31 +31,7 @@ p {
 }
 
 
-h1, h2, h3, h4, h5, h6 { margin: 0; }
-h1 {
-  padding-top: 20rem;
-  padding-bottom: 18rem;
-}
-h2 {
-  padding-top: 20rem;
-  padding-bottom: 16rem;
-}
-h3 {
-  padding-top: 20rem;
-  padding-bottom: 14rem;
-}
-h4 {
-  padding-top: 20rem;
-  padding-bottom: 12rem;
-}
-h5 {
-  padding-top: 20rem;
-  padding-bottom: 10rem;
-}
-h6 {
-  padding-top: 20rem;
-  padding-bottom: 8rem;
-}
+h1, h2, h3, h4, h5, h6 { margin: 0; padding: 0; }
 
 
 a {
