--- a/src/template/components/ArticleCard_A/style.scss
+++ b/src/template/components/ArticleCard_A/style.scss
@@ -92,6 +92,9 @@
   width: 100%;
   height: var(--article-card-height);
   transition: 200ms;
+  ul, li {
+    position: relative; 
+  }
   .textbox {
     flex-grow: 1;
     width: 100%;
