--- a/src/template/components/ArticleCard_Searched_A/style.scss
+++ b/src/template/components/ArticleCard_Searched_A/style.scss
@@ -1,69 +1,134 @@
 /** @/template/components/ArticleCard_A/_style.scss */
 
-
 :is(.scale--XXL, .scale--XL, .scale--L) .article-card-searched-a{
   --article-card-flex-dir: row;
-  --article-card-height: 200rem;
+  // --article-card-height: 320rem;
   --image-box-width: 240rem;
-  --image-box-height: 100%;
+  // --image-box-height: 100%;
   --text-box-padding: 18rem 28rem 18rem 20rem;
-  --title-line-clamp: 3;
-  --title-max-height: 4.5em;
-  --description-line-clamp: 2;
-  --description-max-height: 3.0em;
-  h1.title { @extend .typo-header-24; }
-  p.description { @extend .typo-body-14; }
+  --title-line-clamp: 4;
+  --title-max-height: 6em;
+  // --raw-line-clamp: 10;
+  // --raw-max-height: 15.0em;
+  h1.title { @extend .typo-header-26; }
+  p.raw { @extend .typo-body-16; }
   
 }
 :is(.scale--M) .article-card-searched-a{
   --article-card-flex-dir: row;
-  --article-card-height: 188rem;
+  // --article-card-height: 188rem;
   --image-box-width: 194rem;
-  --image-box-height: 100%;
+  // --image-box-height: 100%;
   --text-box-padding: 14rem 26rem 14rem 18rem;
-  --title-line-clamp: 3;
-  --title-max-height: 4.5em;
-  --description-line-clamp: 2;
-  --description-max-height: 3em;
-  h1.title { @extend .typo-header-24; }
-  p.description { @extend .typo-body-14; }
+  --title-line-clamp: 4;
+  --title-max-height: 6em;
+  // --raw-line-clamp: 2;
+  // --raw-max-height: 3em;
+  h1.title { @extend .typo-header-26; }
+  p.raw { @extend .typo-body-16; }
   
 }
 :is(.scale--S) .article-card-searched-a{
   --article-card-flex-dir: row;
-  --article-card-height: 174rem;
-  --image-box-width: 100rem;
-  --image-box-height: 100%;
+  // --article-card-height: 174rem;
+  --image-box-width: 140rem;
+  // --image-box-height: 100%;
   --text-box-padding: 14rem 26rem 14rem 18rem;
-  --title-line-clamp: 3;
-  --title-max-height: 4.5em;
-  --description-line-clamp: 2;
-  --description-max-height: 3em;
-  h1.title { @extend .typo-header-22; }
-  p.description { @extend .typo-body-13; }
+  --title-line-clamp: 4;
+  --title-max-height: 6em;
+  // --raw-line-clamp: 2;
+  // --raw-max-height: 3em;
+  h1.title { @extend .typo-header-24; }
+  p.raw { @extend .typo-body-15; }
   
 }
 :is(.scale--XS, .scale--XXS) .article-card-searched-a{
   --article-card-flex-dir: column;
-  --article-card-height: 400rem;
-  --image-box-width: 100%;
+  // --article-card-height: 352rem;
+  // --image-box-width: 100%;
   --image-box-height: 140rem;
   --text-box-padding: 16rem 26rem 16rem 20rem;
   --title-line-clamp: 4;
   --title-max-height: 6em;
-  --description-line-clamp: 3;
-  --description-max-height: 4.5em;
+  // --raw-line-clamp: 2;
+  // --raw-max-height: 3.0em;
   h1.title { @extend .typo-header-24; }
-  p.description { @extend .typo-body-14; }
+  p.raw { @extend .typo-body-15; }
 }
+
+:is(.scale--XXL) .article-card-searched-a {
+  // border-radius: 30rem;
+  // overflow: hidden;
+}
+:is(.scale--XL) .article-card-searched-a {
+  // border-radius: 30rem;
+  // overflow: hidden;
+}
+:is(.scale--L) .article-card-searched-a {
+  // border-radius: 30rem;
+  // overflow: hidden;
+}
+:is(.scale--M) .article-card-searched-a {
+  // border-radius: 30rem;
+  // overflow: hidden;
+}
+:is(.scale--S) .article-card-searched-a {
+  // border-radius: 30rem;
+  // overflow: hidden;
+}
+:is(.scale--XS) .article-card-searched-a {
+  // border-radius: 30rem;
+  // overflow: hidden;
+}
+:is(.scale--XXS) .article-card-searched-a {
+  // border-radius: 30rem;
+  // overflow: hidden;
+}
+
+
+.article-card-searched-a {
+  color: var(--OnSurface);
+  background-color: var(--Surface);
+  @include PlateBackgroundColor(var(--Primary));
+  @include PlateBackgroundOpacity(0.02);
+  @include PlateTransition(200ms);
+  .textbox h1.title {
+    mark {
+      color: var(--OnPrimary);
+      background-color: var(--OnPrimaryContainer);
+    }
+  }
+  .textbox p.raw {
+    color: var(--OnSecondaryContainer);
+    background-color: var(--OnPrimary);
+    border: 1rem solid var(--PrimaryContainer);
+    mark {
+      color: var(--OnPrimary);
+      background-color: var(--OnPrimaryContainer);
+    }
+  }
+}
+.article-card-searched-a:hover {
+  color: var(--OnPrimaryContainer);
+  @include Shadow-2(10rem);
+  @include PlateBackgroundColor(var(--PrimaryContainer));
+  @include PlateBackgroundOpacity(1);
+  transform: scale(1.01);
+}
+
 
 
 .article-card-searched-a {
   display: flex;
   flex-direction: var(--article-card-flex-dir);
+  align-items: stretch;
   width: 100%;
-  height: var(--article-card-height);
+  // height: var(--article-card-height);
+  height: fit-content;
   transition: 200ms;
+  ul, li {
+    position: relative; 
+  }
   .textbox {
     flex-grow: 1;
     width: 100%;
@@ -71,7 +136,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 6rem;
+    gap: 10rem;
     padding: var(--text-box-padding);
     > * { width: 100%; }
     h1.title { 
@@ -82,32 +147,30 @@
       max-height: var(--title-max-height);
       overflow:hidden;
     }
-    p.description { 
-      flex-grow: 1; 
+    p.raw { 
       display: -webkit-box;
       -webkit-box-orient: vertical;
-      -webkit-line-clamp: var(--description-line-clamp);
-      max-height: var(--description-max-height);
+      -webkit-line-clamp: 10;
+      max-height: 15;
       overflow: hidden;
+      padding: 8rem;
     }
     .article-infopack {
-      flex-grow: 1;
+      flex-grow: 0;
+      flex-shrink: 0;
       align-items: flex-end;
       align-content: flex-end;
-      opacity: 0.74;
+      opacity: 1;
       .info-date {
         padding-bottom: 1rem;
       }
-    }
-    .article-infopack:first-child {
-      flex-grow: 0;
-      opacity: 0.64;
     }
 
   }
   .imagebox {
     width: var(--image-box-width);
     height: var(--image-box-height);
+    // height: 100%;
     flex-shrink: 0;
     flex-grow: 0;
     img {
@@ -116,23 +179,6 @@
       object-fit: cover;
     }
   }
-}
-
-
-
-.article-card-searched-a {
-  color: var(--OnSurface);
-  background-color: var(--Surface);
-  @include PlateBackgroundColor(var(--Primary));
-  @include PlateBackgroundOpacity(0.02);
-  @include PlateTransition(200ms);
-}
-.article-card-searched-a:hover {
-  color: var(--OnPrimaryContainer);
-  @include Shadow-2(10rem);
-  @include PlateBackgroundColor(var(--PrimaryContainer));
-  @include PlateBackgroundOpacity(1);
-  transform: scale(1.01);
 }
 
 
