--- a/src/configs/styles/typography.scss
+++ b/src/configs/styles/typography.scss
@@ -31,8 +31,10 @@
 
 
 
+@include Body("Inter", 20, 26, "",   0, 480, 340, 620);
+@include Body("Inter", 19, 24, "",   0, 480, 340, 620);
 @include Body("Inter", 18, 24, "",   0, 480, 340, 620);
-@include Body("Inter", 17, 24, "",   0, 480, 340, 620);
+@include Body("Inter", 17, 22, "",   0, 480, 340, 620);
 @include Body("Inter", 16, 22, "",   0, 480, 340, 620);
 @include Body("Inter", 15, 20, "",   0, 480, 340, 620);
 @include Body("Inter", 14, 20, "",   0, 480, 340, 620);
@@ -42,9 +44,9 @@
 @include Body("Inter", 10, 16, "", 0.5, 480, 340, 620);
 @include Body("Inter",  9, 12, "", 0.5, 480, 340, 620);
 @include Body("Inter",  8, 12, "", 0.5, 480, 340, 620);
-$bodySizes: 17, 18, 16, 15, 14, 13, 12, 11, 10, 9, 8;
+$bodySizes: 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8;
 @each $size in $bodySizes {
-  .typo-body-#{$size} {
+  .typo-body-#{$size}, .typo-body-#{$size}--bold, .typo-body-#{$size}--light {
     word-wrap:break-word;
     word-break: keep-all;
   }
@@ -52,6 +54,8 @@ $bodySizes: 17, 18, 16, 15, 14, 13, 12, 11, 10, 9, 8;
 
 
 
+@include Caption("JetBrainsMono", 20, 24, "", 1.5, 400, 200, 700);
+@include Caption("JetBrainsMono", 19, 22, "", 1.5, 400, 200, 700);
 @include Caption("JetBrainsMono", 18, 22, "", 1.5, 400, 200, 700);
 @include Caption("JetBrainsMono", 17, 20, "", 1.5, 400, 200, 700);
 @include Caption("JetBrainsMono", 16, 20, "", 1.5, 400, 200, 700);
@@ -63,9 +67,9 @@ $bodySizes: 17, 18, 16, 15, 14, 13, 12, 11, 10, 9, 8;
 @include Caption("JetBrainsMono", 10, 14, "",   3, 400, 240, 720);
 @include Caption("JetBrainsMono",  9, 12, "",   4, 400, 240, 720);
 @include Caption("JetBrainsMono",  8, 12, "",   4, 400, 240, 720);
-$captionSizes: 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8;
+$captionSizes: 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8;
 @each $size in $captionSizes {
-  .typo-caption-#{$size} {
+  .typo-caption-#{$size}, .typo-caption-#{$size}--bold, .typo-caption-#{$size}--light {
     // @include noSelect();
     word-wrap:break-word;
     word-break: keep-all;
@@ -74,22 +78,11 @@ $captionSizes: 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8;
 
 
 
-@include Mark("Archivo", 22, 26, "", 6.0, 500, 250, 600, 800);
-@include Mark("Archivo", 21, 24, "", 6.0, 500, 250, 600, 800);
-@include Mark("Archivo", 20, 24, "", 6.0, 500, 250, 600, 800);
-@include Mark("Archivo", 19, 22, "", 6.0, 500, 260, 610, 810);
-@include Mark("Archivo", 18, 22, "", 6.0, 500, 260, 610, 810);
-@include Mark("Archivo", 17, 20, "", 6.5, 500, 270, 620, 820);
-@include Mark("Archivo", 16, 20, "", 6.5, 500, 270, 620, 820);
-@include Mark("Archivo", 15, 18, "", 7.0, 500, 280, 630, 830);
-@include Mark("Archivo", 14, 18, "", 7.0, 500, 280, 630, 830);
-@include Mark("Archivo", 13, 16, "", 7.5, 500, 290, 640, 840);
-@include Mark("Archivo", 12, 16, "", 7.5, 500, 290, 640, 840);
-@include Mark("Archivo", 11, 14, "", 8.0, 500, 300, 650, 850);
-@include Mark("Archivo", 10, 14, "", 8.0, 500, 300, 650, 850);
-$markSizes: 20, 18, 16, 14, 12, 10;
-@each $size in $markSizes {
-  .typo-mark-#{$size} {
+
+@for $i from 10 through 40 {
+  @include Mark("Archivo", $i, $i+4, "", 3.0, 500, 270, 620, 820);
+
+  .typo-mark-#{$i}, .typo-mark-#{$i}--bold, .typo-mark-#{$i}--light, .typo-mark-#{$i}--heavy {
     font-variation-settings:
       'wdth' 114;
     @include noSelect();
@@ -97,5 +90,3 @@ $markSizes: 20, 18, 16, 14, 12, 10;
     word-break: break-all;
   }
 }
-
-
