--- a/src/template/styles/_defaults.scss
+++ b/src/template/styles/_defaults.scss
@@ -1,5 +1,49 @@
 /* @/template/styles/_defaults.scss */
 
+
+
+html {
+    height: 100%;
+    width: 100vw;
+    padding: 0; margin: 0;
+}
+  
+  html * {
+    // DISABLE MOBILE TAB HIGHLIGHTS
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    
+    box-sizing: border-box; /* 오페라(Opera) */
+    -moz-box-sizing: border-box; /* 파이어폭스(Firefox)*/
+    -webkit-box-sizing: border-box; /* 웹킷(Webkit) & 크롬(Chrome) */
+}
+  
+body, #app {
+    width: 100vw;
+    padding: 0; margin: 0;
+}
+  
+ol, ul {
+    padding: 0;
+    margin: 0;
+}
+li {
+    margin:0;
+    padding: 0;
+    text-indent: 0;
+    list-style-type: none;
+}
+  
+a,
+input,
+button {
+    outline: 0;
+}
+  
+:focus {
+    outline: none;
+}
+
+
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
@@ -7,7 +51,7 @@ button {
     background: none;
     border: 0;
     color: inherit;
-    /* cursor: default; */
+    cursor: pointer;
     font: inherit;
     line-height: normal;
     overflow: visible;
@@ -24,7 +68,10 @@ button::-moz-focus-inner {
 }
 
 
-
+#router-page {
+    position: relative;
+    z-index: 0;
+}
 
 
 
