--- a/src/template/styles/_defaults.scss
+++ b/src/template/styles/_defaults.scss
@@ -10,7 +10,7 @@ html {
   
   html * {
     // DISABLE MOBILE TAB HIGHLIGHTS
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    // -webkit-tap-highlight-color: rgba(0,0,0,0);
     
     box-sizing: border-box; /* 오페라(Opera) */
     -moz-box-sizing: border-box; /* 파이어폭스(Firefox)*/
@@ -20,6 +20,10 @@ html {
 body, #app {
     width: 100vw;
     padding: 0; margin: 0;
+}
+
+img {
+    user-select: none;
 }
   
 ol, ul {
