--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,7 +1,7 @@
 /* @/configs/ui/_typography.scss */
-@import "@/configs/styles/font/archivo.css";
-@import "@/configs/styles/font/inter.css";
-@import "@/configs/styles/font/JetBrainsMono.css";
+@import "@/styles/font/archivo.css";
+@import "@/styles/font/inter.css";
+@import "@/styles/font/JetBrainsMono.css";
 
 @import "@/template/styles/typography/_mixins.scss";
 
