--- a/src/template/main.scss
+++ b/src/template/main.scss
@@ -5,7 +5,7 @@
 @import './components/**/*.scss';
 @import './compositions/**/*.scss';
 
-@import '../configs/**/*.scss';
+@import '../styles/**/*.scss';
 @import '../pages/**/*.scss';
 
 @import '../customComponents/**/*.scss';
