Building Markdown_BlogArticle...

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -77,6 +77,8 @@
 // SYSTEM COLORS =====================
 
 .scheme--light {
+--Ink: #000000;
+--Base: #ffffff;
 --Error: #DF1125;
 --OnError: #FFF0F0;
 --ErrorContainer: #F7B9BC;
@@ -91,7 +93,9 @@
 --OnPositiveContainer: #2c602a;
 }
 .scheme--dark {
---Error: #DF1125;
+--Ink: #ffffff;
+--Base: #000000;
+--Error: #030202;
 --OnError: #FFF0F0;
 --ErrorContainer: #F7B9BC;
 --OnErrorContainer: #AF0C1F;
