--- a/src/template/components/Searchbox_Mini/style.scss
+++ b/src/template/components/Searchbox_Mini/style.scss
@@ -2,10 +2,14 @@
   width: 100%;
   height: 40rem;
   position: relative;
+
+  --normal-color: var(--OnSurface);
+  --accent-color: var(--Primary);
+  --on-accent-color: var(--OnPrimary);
   
   .icon {
     position: absolute;
-    color: var(--Primary);
+    color: var(--normal-color);
     padding: 10rem;
   }
 
@@ -16,16 +20,21 @@
 
     transition: 140ms;
 
-    color: var(--OnSurface);
+    color: var(--normal-color);
     @extend .typo-body-14;
 
     background-color: #ffffff00;
     outline: 2px solid rgba(255, 255, 255, 0);
-    border: 2rem solid var(--Primary);
+    border: 2rem solid var(--normal-color);
     border-radius: 0;
   }
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: var(--normal-color);
+    opacity: 0.6; /* Firefox */
+  }
   input[type=text]:focus-visible {
-    background-color: var(--OnPrimary);
-    outline: 2px solid var(--Primary);
+    // color: var(--normal-color) !important;
+    background-color: var(--on-accent-color);
+    border-color: var(--accent-color) !important;
   }
 }
