--- a/src/template/components/Toaster/style.scss
+++ b/src/template/components/Toaster/style.scss
@@ -116,6 +116,6 @@
 .toaster-enter-to,
 .toaster-leave-from {
   opacity: 1;
-  // transform: translateY(0rem);
+  transform: translateY(0rem);
 }
 
