--- a/src/template/styles/_defaults.scss
+++ b/src/template/styles/_defaults.scss
@@ -8,14 +8,16 @@ html {
     padding: 0; margin: 0;
 }
   
-  html * {
+html * {
     // DISABLE MOBILE TAB HIGHLIGHTS
     // -webkit-tap-highlight-color: rgba(0,0,0,0);
-    
+
     box-sizing: border-box; /* 오페라(Opera) */
     -moz-box-sizing: border-box; /* 파이어폭스(Firefox)*/
     -webkit-box-sizing: border-box; /* 웹킷(Webkit) & 크롬(Chrome) */
 }
+
+// * { transform: translateZ(0px); }
   
 body, #app {
     position: relative;
