--- a/src/template/components/Markdown_BlogArticle/Sections/fronthead.scss
+++ b/src/template/components/Markdown_BlogArticle/Sections/fronthead.scss
@@ -175,11 +175,11 @@
       width: 100%; height: 100%;
       object-fit: cover;
     }
-    p {
+    cite {
       @extend .typo-caption-12;
       color: var(--Ink);
       margin-top: 0.2em;
-      opacity: 0.66;
+      opacity: 0.48;
     }
   }
 
@@ -202,6 +202,9 @@
       width: 100%;
       gap: 8rem;
       flex-wrap: wrap;
+      a span {
+
+      }
     }
 
     .divider {
