--- a/src/template/components/Toaster/style.scss
+++ b/src/template/components/Toaster/style.scss
@@ -23,10 +23,10 @@
   height: fit-content;
   padding-top: var(--nav-bar-height);
   margin: var(--container-margin);
-  
+  // background-color: red;
   position: fixed;
   top: 0; right: 0;
-  z-index: 100;
+  z-index: 200;
   
   pointer-events: none;
   user-select: none;
