--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -50,7 +50,7 @@
     li { display: block; position: relative;}
 
     #highlighted-articles {
-      padding-top: calc(var(--nav-bar-height) + 20rem);
+      padding-top: var(--nav-bar-height);
       display: flex;
       flex-direction: column;
       align-items: center;
