--- a/src/template/components/ArticleCard_Searched_A/style.scss
+++ b/src/template/components/ArticleCard_Searched_A/style.scss
@@ -134,7 +134,7 @@
       display: -webkit-box;
       -webkit-box-orient: vertical;
       -webkit-line-clamp: 10;
-      max-height: 15;
+      max-height: 14.4em;
       overflow: hidden;
       padding: 8rem;
     }
