--- a/src/template/styles/_defaults.scss
+++ b/src/template/styles/_defaults.scss
@@ -81,11 +81,30 @@ button::-moz-focus-inner {
 }
 
 
+input[type="color"] {
+	-webkit-appearance: none;
+	appearance: none;
+	border: none;
+    padding: 0;
+    margin: 0;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+}
 
 
 
+.markdown-body {
 
 
-
+    img {
+      max-width: 100%;
+    }
+  
+  
+  }
 
 
