--- a/src/pages/Search/style.scss
+++ b/src/pages/Search/style.scss
@@ -43,7 +43,7 @@
   }
 }
 
-.page--search #app .ad-tower li > * {
+.page--search #app .gwang-tower li > * {
   top: calc(var(--nav-bar-height) + var(--wrapper-gap) + calc(var(--input-font-size) * 1.24));
 }
 
