--- a/src/template/compositions/Markdown_BlogArticle/Sections/fronthead.scss
+++ b/src/template/compositions/Markdown_BlogArticle/Sections/fronthead.scss
@@ -68,7 +68,7 @@
   flex-direction: column;
   align-items: center;
 
-  .ad-box {
+  .gwang-box {
     margin-top: var(--adbox-margin-top);
     margin-bottom: var(--adbox-margin-bottom);
   }
